[package]
name = "prime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
colored = "2.0.0"
clap = { version = "4.1.8", features = ["derive"] }
serde = { version = "1.0.156", features = ["derive"] }
serde_yaml = "0.9.19"
regex = "1.0.0"
glob = "0.3.1"